fix display bug on firefox

--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -129,9 +129,6 @@
 
 .home-logged{
  .container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     padding-bottom: 6em;
   }
 
